--- a/experience.html
+++ b/experience.html
@@ -34,13 +34,13 @@
       <img src="companies/abcreative.png" draggable="false"/>
       <h2>Interactive Developer</h2>
       <h3>AB Creative</br>Sep 2010 - Sep 2011</h3>
-      <p>Development of interactive real-time walkthroughs and demos for Port of Rotterdam, Province Gouda, Unlimited Snow</p>
+      <p>Development of interactive real-time demos for Port of Rotterdam, Province Gouda, Unlimited Snow</p>
     </div>
     <div>
       <img src="companies/3dcapacity.png" draggable="false"/>
       <h2>Technical Artist</h2>
       <h3>3D Capacity</br>Jun 2006 - Jun 2010</h3>
-      <p>Creation of 3D assets for real-time architectural walkthroughs of amongs others Moebius House, IJDock, Boekenberg and Therme Vals.</p>
+      <p>Creation of 3D assets for real-time architectural demos of among others Moebius House, IJDock, Boekenberg and Therme Vals.</p>
     </div>
     <div>
       <img src="companies/componence.png" draggable="false"/>
