--- a/index.html
+++ b/index.html
@@ -70,61 +70,61 @@
       <img src="work/donkere_sluis.jpg" draggable="false"/>
       <h2>Donkere Sluis</h2>
       <h3>AB Creative</h3>
-      <p>Real-time walkthrough helps to visualize restoration of a centuries-old water sluice (donkere sluis) as well as effects of water level in canals it regulates.</p>
+      <p>Real-time demo helps to visualize restoration of a centuries-old water sluice (donkere sluis) as well as effects of water level in canals it regulates.</p>
     </div>
     <div>
       <img src="work/maasvlakte_2.jpg" draggable="false"/>
       <h2>Maasvlakte 2</h2>
       <h3>AB Creative</h3>
-      <p>Real-time walkthrough allows to explore a major civil engineering project Maasvlakte 2 - construction of a new port and supporting infrastructure on reclaimed land.</p>
+      <p>Real-time demo allows to explore a major civil engineering project Maasvlakte 2 - construction of a new port and supporting infrastructure on reclaimed land.</p>
     </div>
     <div>
       <img src="work/arctic_world.jpg" draggable="false"/>
       <h2>Artic World</h2>
       <h3>AB Creative</h3>
-      <p>Real-time walkthrough of a unique park where visitors find themselves in a fantastic landscape with snow attractions, stylized areas and animatronics featuring arctic animals.</p>
+      <p>Real-time demo of a unique park where visitors find themselves in a fantastic landscape with snow attractions, stylized areas and animatronics featuring arctic animals.</p>
     </div>
     <div>
       <img src="work/boekenberg.jpg" draggable="false"/>
       <h2>Boekenberg</h2>
       <h3>3D Capacity</h3>
-      <p>Boekenberg (literally translated as a mountain of books) is a real-time walkthrough of a remarkable library in a form of books pile enclosed in a glass dome located in the city of Spijkenisse.</p>
+      <p>Boekenberg (literally translated as a mountain of books) is a real-time demo of a remarkable library in a form of books pile enclosed in a glass dome located in the city of Spijkenisse.</p>
     </div>
     <div>
       <img src="work/therme_vals.jpg" draggable="false"/>
       <h2>Therme Vals</h2>
       <h3>3D Capacity</h3>
-      <p>Real-time walkthrough of a spa-complex located in a valley of Switzerland remarkable for its facilities, building aesthetic qualities and a scenic environment.</p>
+      <p>Real-time demo of a spa-complex located in a valley of Switzerland remarkable for its facilities, building aesthetic qualities and a scenic environment.</p>
     </div>
     <div>
       <img src="work/ijdock.jpg" draggable="false"/>
       <h2>IJDock</h2>
       <h3>3D Capacity</h3>
-      <p>Realtime walkthrough of a new district which includes: hotels, living apartments, commercial spaces and a palace of justice located in the harbour area west of the Amsterdam Central Station.</p>
+      <p>Realtime demo of a new district which includes: hotels, living apartments, commercial spaces and a palace of justice located in the harbour area west of the Amsterdam Central Station.</p>
     </div>
     <div>
       <img src="work/meerrijk.jpg" draggable="false"/>
       <h2>Meerrijk</h2>
       <h3>3D Capacity</h3>
-      <p>Real-time walkthrough of the residential and commercial center in Eindhoven designed in a vivid color scheme and surrounded by a vast landscape of Meerland Park.</p>
+      <p>Real-time demo of the residential and commercial center in Eindhoven designed in a vivid color scheme and surrounded by a vast landscape of Meerland Park.</p>
     </div>
     <div>
       <img src="work/suytkade.jpg" draggable="false"/>
       <h2>Suytkade</h2>
       <h3>3D Capacity</h3>
-      <p>Real-time walkthrough of a new residential area located on an open area within a widened canal. Marvelous achievement of urban design!</p>
+      <p>Real-time demo of a new residential area located on an open area within a widened canal. Marvelous achievement of urban design!</p>
     </div>
     <div>
       <img src="work/stadhouderspark.jpg" draggable="false"/>
       <h2>Stadhouderspark</h2>
       <h3>3D Capacity</h3>
-      <p>Real-time walkthrough of a residential district situated in a heart of Stadhouderspark on a place of a former military base.</p>
+      <p>Real-time demo of a residential district situated in a heart of Stadhouderspark on a place of a former military base.</p>
     </div>
     <div>
       <img src="work/moebius.jpg" draggable="false"/>
       <h2>Moebius</h2>
       <h3>3D Capacity</h3>
-      <p>Real-time walkthrough of Moebius house, a modern classic development of the world-famous architectural studio.</p>
+      <p>Real-time demo of Moebius house, a modern classic development of the world-famous architectural studio.</p>
     </div>
     <div>
       <img src="work/space_runner.jpg" draggable="false"/>
