--- a/index.html
+++ b/index.html
@@ -126,6 +126,64 @@
       <h3>3D Capacity</h3>
       <p>Real-time demo of Moebius house, a modern classic development of the world-famous architectural studio.</p>
     </div>
+  </div>
+  <div class="container">
+    <div>
+      <img src="companies/twnkls.png" draggable="false"/>
+      <h2>AR Developer</h2>
+      <h3>Twnkls</br>Feb 2017 - present</h3>
+      <p>Development of augmented reality products and demos for Province Zeeland, Damen, Rademaker. Part of a design team.</p>
+    </div>
+    <div>
+      <img src="companies/osc.png" draggable="false"/>
+      <h2>Simulation Developer</h2>
+      <h3>Offshore Simulation Centre</br>May 2015 - Jan 2017</h3>
+      <p>Development of a maritime simulator for use in training by clients such as Rolls-Royce, Statoil and Van Oord. Unity expert role.</p>
+    </div>
+    <div>
+      <img src="companies/sticky_studios.png" draggable="false"/>
+      <h2>Game Developer</h2>
+      <h3>Sticky Studios</br>Apr 2013 - Apr 2014</h3>
+      <p>Development of games for Warner and Fox movie marketing campaigns.</p>
+    </div>
+    <div>
+      <img src="companies/little_chicken.png" draggable="false"/>
+      <h2>Serious Game Developer</h2>
+      <h3>Little Chicken</br>Sep 2012 - Mar 2013</h3>
+      <p>Development of serious games for Cinekid, KLM, Kenteq. Leading a number of projects.</p>
+    </div>
+    <div>
+      <img src="companies/abcreative.png" draggable="false"/>
+      <h2>Interactive Developer</h2>
+      <h3>AB Creative</br>Sep 2010 - Sep 2011</h3>
+      <p>Development of interactive real-time demos for Port of Rotterdam, Province Gouda, Unlimited Snow</p>
+    </div>
+    <div>
+      <img src="companies/3dcapacity.png" draggable="false"/>
+      <h2>Technical Artist</h2>
+      <h3>3D Capacity</br>Jun 2006 - Jun 2010</h3>
+      <p>Creation of 3D assets for real-time architectural demos of among others Moebius House, IJDock, Boekenberg and Therme Vals.</p>
+    </div>
+    <div>
+      <img src="companies/componence.png" draggable="false"/>
+      <h2>Backend Developer</h2>
+      <h3>Componence</br>Jan 2006 - Jun 2006</h3>
+      <p>Development of proprietary content management system and enterprise websites for Elsevier.</p>
+    </div>
+    <div>
+      <img src="companies/leiden_university.png" draggable="false"/>
+      <h2>Advanced Dutch Language</h2>
+      <h3>Leiden University</br>May 2011 - Jun 2017</h3>
+      <p>Dutch language degree: effective operational proficiency (CEFR C1).</p>
+    </div>
+    <div>
+      <img src="companies/kpi.png" draggable="false"/>
+      <h2>MSc in Computer Science</h2>
+      <h3>Technical University of Sikorsky</br>Sep 2001 - Jul 2007</h3>
+      <p>Specialization as systems analyst: analyzing, designing and implementing information systems.</p>
+    </div>
+  </div>
+  <div class="container">
     <div>
       <img src="work/space_runner.jpg" draggable="false"/>
       <h2>Space Runner</h2>
@@ -181,6 +239,6 @@
       <p>Watercolor and ink painting as a part of a workshop: Boletus Edulis mushroom for those who are interested.</p>
     </div>
   </div>
-  <h4 id="cryptocontact" user="stan" domain="novozhylov" extension="me" code="+31" operator="068" number="3920859" city="Leiden, The Netherlands">Contact me:</br></h4>
+  <h4 id="cryptocontact" user="stan" domain="novozhylov" extension="me" code="+31" operator="068" number="3920859" city="Leiden" country="The Netherlands">Contact me:</br></h4>
 </body>
 </html>
