--- a/index.html
+++ b/index.html
@@ -4,241 +4,241 @@
   <link rel="stylesheet" type="text/css" href="theme.css">
 </head>
 <body>
-  <h1 id="nonselectable"><b>STAN</b> NOVOZHYLOV</h1>
-  <div class="container">
+  <h1 id="logotype"><b>STAN</b> NOVOZHYLOV</h1>
+  <div class="container" id="works">
     <div>
-      <img src="work/zeeland_experience.jpg" draggable="false"/>
+      <img src="works/zeeland_experience.jpg" draggable="false"/>
       <h2>Zeeland Experience</h2>
       <h3>Twnkls</h3>
       <p>Augmented reality app allows the general public to learn more about facilities and services in the province Zeeland in hope to persuade them to relocate there.</p>
     </div>
     <div>
-      <img src="work/pump_maintenance.jpg" draggable="false"/>
+      <img src="works/pump_maintenance.jpg" draggable="false"/>
       <h2>Pump Maintenance</h2>
       <h3>Twnkls</h3>
       <p>HoloLens app helps future injection pump users to learn its operation and maintenance in an efficient hands-free way.</p>
     </div>
     <div>
-      <img src="work/fathomvis.jpg" draggable="false"/>
+      <img src="works/fathomvis.jpg" draggable="false"/>
       <h2>FathomVis</h2>
       <h3>Offshore Simulation Centre</h3>
       <p>Advanced maritime simulator supports a wide range of mission-critical training such as: anchor handling, offshore crane and subsea simulations.</p>
     </div>
     <div>
-      <img src="work/hobbit_2.jpg" draggable="false"/>
+      <img src="works/hobbit_2.jpg" draggable="false"/>
       <h2>Hobbit 2</h2>
       <h3>Sticky Studios</h3>
       <p>Web-game based on Peter Jackson's movie. Get a chance to play the barrel escape scene: raft the blustering river and defend your party from the furious orcs.</p>
     </div>
     <div>
-      <img src="work/gravity.jpg" draggable="false"/>
+      <img src="works/gravity.jpg" draggable="false"/>
       <h2>Gravity</h2>
       <h3>Sticky Studios</h3>
       <p>Multiplayer mobile game based on the movie with a similar title. Featuring story-mode that puts the player in circumstances alike in the movie.</p>
     </div>
     <div>
-      <img src="work/pacific_rim.jpg" draggable="false"/>
+      <img src="works/pacific_rim.jpg" draggable="false"/>
       <h2>Pacific Rim</h2>
       <h3>Sticky Studios</h3>
       <p>Mobile augmented reality game based on the Pacific Rim movie. Challenge your Facebook or Twitter friends and have a fight with them! ...Or design your own postcards together.</p>
     </div>
     <div>
-      <img src="work/man_of_steel.jpg" draggable="false"/>
+      <img src="works/man_of_steel.jpg" draggable="false"/>
       <h2>Man of Steel</h2>
       <h3>Sticky Studios</h3>
       <p>Web-game based on Zak Snyder's title. Fly through environments the movie takes place in and finish your race faster than your Facebook or Twitter friends.</p>
     </div>
     <div>
-      <img src="work/cinekid_filmspel.jpg" draggable="false"/>
+      <img src="works/cinekid_filmspel.jpg" draggable="false"/>
       <h2>Cinekid Filmspel</h2>
       <h3>Little Chicken</h3>
       <p>Serious game helps children to learn basics of animation: create own characters, film a movie and publish it in a gallery or on social media.</p>
     </div>
     <div>
-      <img src="work/pop_the_lid.jpg" draggable="false"/>
+      <img src="works/pop_the_lid.jpg" draggable="false"/>
       <h2>Pop the Lid</h2>
       <h3>Little Chicken</h3>
       <p>Pop the Lid is a social gift service: it is a fun and easy way to send gifts to your friends or family using your mobile device or social media.</p>
     </div>
     <div>
-      <img src="work/craft_mechatronica.jpg" draggable="false"/>
+      <img src="works/craft_mechatronica.jpg" draggable="false"/>
       <h2>Craft Mechatronica</h2>
       <h3>Little Chicken</h3>
       <p>Web serious game allows learning milling, lathing and drilling machines safety, operation and maintenance by performing tasks interactively assigned by teachers.</p>
     </div>
     <div>
-      <img src="work/donkere_sluis.jpg" draggable="false"/>
+      <img src="works/donkere_sluis.jpg" draggable="false"/>
       <h2>Donkere Sluis</h2>
       <h3>AB Creative</h3>
       <p>Real-time demo helps to visualize restoration of a centuries-old water sluice (donkere sluis) as well as effects of water level in canals it regulates.</p>
     </div>
     <div>
-      <img src="work/maasvlakte_2.jpg" draggable="false"/>
+      <img src="works/maasvlakte_2.jpg" draggable="false"/>
       <h2>Maasvlakte 2</h2>
       <h3>AB Creative</h3>
       <p>Real-time demo allows to explore a major civil engineering project Maasvlakte 2 - construction of a new port and supporting infrastructure on reclaimed land.</p>
     </div>
     <div>
-      <img src="work/arctic_world.jpg" draggable="false"/>
+      <img src="works/arctic_world.jpg" draggable="false"/>
       <h2>Artic World</h2>
       <h3>AB Creative</h3>
       <p>Real-time demo of a unique park where visitors find themselves in a fantastic landscape with snow attractions, stylized areas and animatronics featuring arctic animals.</p>
     </div>
     <div>
-      <img src="work/boekenberg.jpg" draggable="false"/>
+      <img src="works/boekenberg.jpg" draggable="false"/>
       <h2>Boekenberg</h2>
       <h3>3D Capacity</h3>
       <p>Boekenberg (literally translated as a mountain of books) is a real-time demo of a remarkable library in a form of books pile enclosed in a glass dome located in the city of Spijkenisse.</p>
     </div>
     <div>
-      <img src="work/therme_vals.jpg" draggable="false"/>
+      <img src="works/therme_vals.jpg" draggable="false"/>
       <h2>Therme Vals</h2>
       <h3>3D Capacity</h3>
       <p>Real-time demo of a spa-complex located in a valley of Switzerland remarkable for its facilities, building aesthetic qualities and a scenic environment.</p>
     </div>
     <div>
-      <img src="work/ijdock.jpg" draggable="false"/>
+      <img src="works/ijdock.jpg" draggable="false"/>
       <h2>IJDock</h2>
       <h3>3D Capacity</h3>
       <p>Realtime demo of a new district which includes: hotels, living apartments, commercial spaces and a palace of justice located in the harbour area west of the Amsterdam Central Station.</p>
     </div>
     <div>
-      <img src="work/meerrijk.jpg" draggable="false"/>
+      <img src="works/meerrijk.jpg" draggable="false"/>
       <h2>Meerrijk</h2>
       <h3>3D Capacity</h3>
       <p>Real-time demo of the residential and commercial center in Eindhoven designed in a vivid color scheme and surrounded by a vast landscape of Meerland Park.</p>
     </div>
     <div>
-      <img src="work/suytkade.jpg" draggable="false"/>
+      <img src="works/suytkade.jpg" draggable="false"/>
       <h2>Suytkade</h2>
       <h3>3D Capacity</h3>
       <p>Real-time demo of a new residential area located on an open area within a widened canal. Marvelous achievement of urban design!</p>
     </div>
     <div>
-      <img src="work/stadhouderspark.jpg" draggable="false"/>
+      <img src="works/stadhouderspark.jpg" draggable="false"/>
       <h2>Stadhouderspark</h2>
       <h3>3D Capacity</h3>
       <p>Real-time demo of a residential district situated in a heart of Stadhouderspark on a place of a former military base.</p>
     </div>
     <div>
-      <img src="work/moebius.jpg" draggable="false"/>
+      <img src="works/moebius.jpg" draggable="false"/>
       <h2>Moebius</h2>
       <h3>3D Capacity</h3>
       <p>Real-time demo of Moebius house, a modern classic development of the world-famous architectural studio.</p>
     </div>
   </div>
-  <div class="container">
+  <div class="container" id="experience">
     <div>
       <img src="companies/twnkls.png" draggable="false"/>
       <h2>AR Developer</h2>
-      <h3>Twnkls</br>Feb 2017 - present</h3>
+      <h3>Feb 2017 - present</h3>
       <p>Development of augmented reality products and demos for Province Zeeland, Damen, Rademaker. Part of a design team.</p>
     </div>
     <div>
       <img src="companies/osc.png" draggable="false"/>
       <h2>Simulation Developer</h2>
-      <h3>Offshore Simulation Centre</br>May 2015 - Jan 2017</h3>
+      <h3>May 2015 - Jan 2017</h3>
       <p>Development of a maritime simulator for use in training by clients such as Rolls-Royce, Statoil and Van Oord. Unity expert role.</p>
     </div>
     <div>
       <img src="companies/sticky_studios.png" draggable="false"/>
       <h2>Game Developer</h2>
-      <h3>Sticky Studios</br>Apr 2013 - Apr 2014</h3>
+      <h3>Apr 2013 - Apr 2014</h3>
       <p>Development of games for Warner and Fox movie marketing campaigns.</p>
     </div>
     <div>
       <img src="companies/little_chicken.png" draggable="false"/>
       <h2>Serious Game Developer</h2>
-      <h3>Little Chicken</br>Sep 2012 - Mar 2013</h3>
+      <h3>Sep 2012 - Mar 2013</h3>
       <p>Development of serious games for Cinekid, KLM, Kenteq. Leading a number of projects.</p>
     </div>
     <div>
       <img src="companies/abcreative.png" draggable="false"/>
       <h2>Interactive Developer</h2>
-      <h3>AB Creative</br>Sep 2010 - Sep 2011</h3>
+      <h3>Sep 2010 - Sep 2011</h3>
       <p>Development of interactive real-time demos for Port of Rotterdam, Province Gouda, Unlimited Snow</p>
     </div>
     <div>
       <img src="companies/3dcapacity.png" draggable="false"/>
       <h2>Technical Artist</h2>
-      <h3>3D Capacity</br>Jun 2006 - Jun 2010</h3>
+      <h3>Jun 2006 - Jun 2010</h3>
       <p>Creation of 3D assets for real-time architectural demos of among others Moebius House, IJDock, Boekenberg and Therme Vals.</p>
     </div>
     <div>
       <img src="companies/componence.png" draggable="false"/>
       <h2>Backend Developer</h2>
-      <h3>Componence</br>Jan 2006 - Jun 2006</h3>
+      <h3>Jan 2006 - Jun 2006</h3>
       <p>Development of proprietary content management system and enterprise websites for Elsevier.</p>
     </div>
     <div>
       <img src="companies/leiden_university.png" draggable="false"/>
       <h2>Advanced Dutch Language</h2>
-      <h3>Leiden University</br>May 2011 - Jun 2017</h3>
+      <h3>May 2011 - Jun 2017</h3>
       <p>Dutch language degree: effective operational proficiency (CEFR C1).</p>
     </div>
     <div>
       <img src="companies/kpi.png" draggable="false"/>
       <h2>MSc in Computer Science</h2>
-      <h3>Technical University of Sikorsky</br>Sep 2001 - Jul 2007</h3>
+      <h3>Sep 2001 - Jul 2007</h3>
       <p>Specialization as systems analyst: analyzing, designing and implementing information systems.</p>
     </div>
   </div>
-  <div class="container">
+  <div class="container" id="hobby">
     <div>
-      <img src="work/space_runner.jpg" draggable="false"/>
-      <h2>Space Runner</h2>
-      <h3>Hobby</h3>
-      <p>Space Runner is an endless runner game with RTS elements and an original gameplay. It originated as a research project on game AI and physics.</p>
-    </div>
-    <div>
-      <img src="work/david.jpg" draggable="false"/>
-      <h2>David</h2>
-      <h3>Hobby</h3>
-      <p>Second work of light and form study: the drawing started on paper as four separate parts: eye, nose, ear and lips and was later digitally composed.</p>
-    </div>
-    <div>
-      <img src="work/farnese_hercules.jpg" draggable="false"/>
-      <h2>Farnese Hercules</h2>
-      <h3>Hobby</h3>
-      <p>Study project of light and form: the drawing began its life on paper in a classroom and was finished digitally.</p>
-    </div>
-    <div>
-      <img src="work/planet_apple.jpg" draggable="false"/>
-      <h2>Planet Apple</h2>
-      <h3>Hobby</h3>
-      <p>Art research project where an apple envisioned as a planet fitting the whole country on its surface.</p>
-    </div>
-    <div>
-      <img src="work/grey_mouse.jpg" draggable="false"/>
+      <img src="works/grey_mouse.jpg" draggable="false"/>
       <h2>Grey Mouse</h2>
-      <h3>Hobby</h3>
+      <h3>2018</h3>
       <p>Watercolor and ink painting as a part of a workshop: grey mouse here.</p>
     </div>
     <div>
-      <img src="work/rainforest_frog.jpg" draggable="false"/>
+      <img src="works/rainforest_frog.jpg" draggable="false"/>
       <h2>Rainforest Frog</h2>
-      <h3>Hobby</h3>
+      <h3>2018</h3>
       <p>Watercolor and ink painting as a part of a workshop: poisonous-green rainforest frog.</p>
     </div>
     <div>
-      <img src="work/polar_bear.jpg" draggable="false"/>
+      <img src="works/polar_bear.jpg" draggable="false"/>
       <h2>Polar Bear</h2>
-      <h3>Hobby</h3>
+      <h3>2018</h3>
       <p>Watercolor and ink painting as a part of a workshop: friend or foe... or food.</p>
     </div>
     <div>
-      <img src="work/bullfinch.jpg" draggable="false"/>
+      <img src="works/bullfinch.jpg" draggable="false"/>
       <h2>Bullfinch</h2>
-      <h3>Hobby</h3>
+      <h3>2018</h3>
       <p>Watercolor and ink painting as a part of a workshop: bullfinch is a gorgeous bird.</p>
     </div>
     <div>
-      <img src="work/mushroom.jpg" draggable="false"/>
+      <img src="works/mushroom.jpg" draggable="false"/>
       <h2>Mushroom</h2>
-      <h3>Hobby</h3>
+      <h3>2018</h3>
       <p>Watercolor and ink painting as a part of a workshop: Boletus Edulis mushroom for those who are interested.</p>
     </div>
+    <div>
+      <img src="works/space_runner.jpg" draggable="false"/>
+      <h2>Space Runner</h2>
+      <h3>2011</h3>
+      <p>Space Runner is an endless runner game with RTS elements and an original gameplay. It originated as a research project on game AI and physics.</p>
+    </div>
+    <div>
+      <img src="works/planet_apple.jpg" draggable="false"/>
+      <h2>Planet Apple</h2>
+      <h3>2011</h3>
+      <p>Art research project where an apple envisioned as a planet fitting the whole country on its surface.</p>
+    </div>
+    <div>
+      <img src="works/david.jpg" draggable="false"/>
+      <h2>David</h2>
+      <h3>2009</h3>
+      <p>Second work of light and form study: the drawing started on paper as four separate parts: eye, nose, ear and lips and was later digitally composed.</p>
+    </div>
+    <div>
+      <img src="works/farnese_hercules.jpg" draggable="false"/>
+      <h2>Farnese Hercules</h2>
+      <h3>2009</h3>
+      <p>Study project of light and form: the drawing began its life on paper in a classroom and was finished digitally.</p>
+    </div>
   </div>
-  <h4 id="cryptocontact" user="stan" domain="novozhylov" extension="me" code="+31" operator="068" number="3920859" city="Leiden" country="The Netherlands">Contact me:</br></h4>
+  <h4 id="contact" user="stan" domain="novozhylov" extension="me" code="+31" operator="068" number="3920859" city="Leiden" country="The Netherlands">Contact:</br></h4>
 </body>
 </html>
