Page anchors added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <div id="header">
     <h3 class="nonselectable" id="logotype"><b>stan</b>novozhylov</h3>
   </div>
-  <div class="container" id="works">
+  <a name="works"/>
+  <div class="container" id="whitebox">
     <div>
       <img src="works/zeeland_experience.jpg" draggable="false"/>
       <h2>Zeeland Experience</h2>
@@ -129,7 +130,8 @@
       <p>Real-time demo of Moebius house, a modern classic development of the world-famous architectural studio.</p>
     </div>
   </div>
-  <div class="container" id="experience">
+  <a name="experience"/>
+  <div class="container" id="blackbox">
     <div>
       <img src="companies/twnkls.png" draggable="false"/>
       <h2>AR Developer</h2>
@@ -185,7 +187,8 @@
       <p>Specialization as systems analyst: analyzing, designing and implementing information systems.</p>
     </div>
   </div>
-  <div class="container" id="hobby">
+  <a name="hobby"/>
+  <div class="container" id="whitebox">
     <div>
       <img src="works/grey_mouse.jpg" draggable="false"/>
       <h2>Grey Mouse</h2>
