Section titles added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <a name="works"/>
   <div class="container" id="whitebox">
     <div>
+      <h1>WORKS</h1>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
+    </div>
+    <div>
       <img src="works/zeeland_experience.jpg" draggable="false"/>
       <h2>Zeeland Experience</h2>
       <h4>Twnkls</h4>
@@ -133,6 +137,10 @@
   <a name="experience"/>
   <div class="container" id="blackbox">
     <div>
+      <h1>EXPERIENCE</h1>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
+    </div>
+    <div>
       <img src="companies/twnkls.png" draggable="false"/>
       <h2>AR Developer</h2>
       <h4>Feb 2017 - present</h4>
@@ -189,6 +197,10 @@
   </div>
   <a name="hobby"/>
   <div class="container" id="whitebox">
+    <div>
+      <h1>HOBBY</h1>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
+    </div>
     <div>
       <img src="works/grey_mouse.jpg" draggable="false"/>
       <h2>Grey Mouse</h2>
