Section headline texts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container" id="whitebox">
     <div>
       <h1>WORKS</h1>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
+      <h3>I have designed and built more than 30 products in Unity including games, simulations, apps and demos for clients ranging from Warner Bros. to Statoil.</h3>
     </div>
     <div>
       <img src="works/zeeland_experience.jpg" draggable="false"/>
@@ -138,7 +138,7 @@
   <div class="container" id="blackbox">
     <div>
       <h1>EXPERIENCE</h1>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
+      <h3>Having worked in development as well as in design departments allows me to evaluate success of a product from multiple viewpoints.</h3>
     </div>
     <div>
       <img src="companies/twnkls.png" draggable="false"/>
@@ -199,7 +199,7 @@
   <div class="container" id="whitebox">
     <div>
       <h1>HOBBY</h1>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
+      <h3>Some of my hobby works which I did either as a part of a workshop either as self study.</h3>
     </div>
     <div>
       <img src="works/grey_mouse.jpg" draggable="false"/>
