Hobby headline linguistical mistake corrected

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <div class="container" id="whitebox">
     <div>
       <h1>HOBBY</h1>
-      <h3>Some of my hobby works which I did either as a part of a workshop either as self study.</h3>
+      <h3>Some of my hobby works which I did either as a part of a workshop or otherwise as self study.</h3>
     </div>
     <div>
       <img src="works/grey_mouse.jpg" draggable="false"/>
