--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <div class="container" id="blackbox">
     <div>
       <h1>EXPERIENCE</h1>
-      <h3>Having worked in development as well as in design departments allows me to evaluate success of a product from multiple viewpoints.</h3>
+      <h3>Having worked in development as well as in design departments I have a broad experience which allows me to envision the future product from multiple viewpoints.</h3>
     </div>
     <div>
       <img src="companies/twnkls.png" draggable="false"/>
