--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </div>
   <a name="works"/>
   <div class="container" id="whitebox">
-    <div>
+    <div class="headline">
       <h1>WORKS</h1>
       <h3>I have designed and built more than 30 products in Unity including games, simulations, apps and demos for clients ranging from Warner Bros. to Statoil.</h3>
     </div>
@@ -136,7 +136,7 @@
   </div>
   <a name="experience"/>
   <div class="container" id="blackbox">
-    <div>
+    <div class="headline">
       <h1>EXPERIENCE</h1>
       <h3>Having worked in development as well as in design departments I have a broad experience which allows me to envision the future product from multiple viewpoints.</h3>
     </div>
@@ -197,7 +197,7 @@
   </div>
   <a name="hobby"/>
   <div class="container" id="whitebox">
-    <div>
+    <div class="headline">
       <h1>HOBBY</h1>
       <h3>Some of my hobby works which I did either as a part of a workshop or otherwise as self study.</h3>
     </div>
