--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div id="header">
-    <h3 class="nonselectable" id="logotype"><b>stan</b>novozhylov</h3>
+    <h3 class="nonselectable" id="logotype"><b>Stan</b> Novozhylov</h3>
   </div>
   <a name="works"/>
   <div class="container" id="whitebox">
