--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
   </div>
   <div id="footer">
-    <h5 id="contact" user="stan" domain="novozhylov" extension="me" code="+31" operator="068" number="3920859" city="Leiden" country="The Netherlands">Contact:</br></h5>
+    <h5 id="contact" user="contact" domain="stanislav" extension="pro" code="+31" operator="068" number="3920859" city="Leiden" country="The Netherlands">Contact:</br></h5>
   </div>
 </body>
 </html>
