--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
       <h3>Having worked in development as well as in design departments I have a broad experience which allows me to envision the future product from multiple viewpoints.</h3>
     </div>
     <div>
+      <img src="companies/siemens_mobility.png" draggable="false"/>
+      <h2>Simulation Engineer</h2>
+      <h4>May 2020 - present</h4>
+      <p>Development of a simulator for infrastructure and mobility sector for usage in training, planning and inspection of tunnels, bridges, roadways, etc.</p>
+    </div>
+    <div>
       <img src="companies/twnkls.png" draggable="false"/>
       <h2>AR Developer</h2>
       <h4>Feb 2018 - present</h4>
