--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div>
       <img src="companies/twnkls.png" draggable="false"/>
       <h2>AR Developer</h2>
-      <h4>Feb 2018 - present</h4>
+      <h4>Feb 2018 - Jan 2019</h4>
       <p>Development of augmented reality products and demos for Province Zeeland, Damen, Rademaker. Part of a design team.</p>
     </div>
     <div>
